<resources>
    <string name="frontpage_name">Front</string>
    <string name="app_name">JustRRead</string>
    <string name="action_login">LOGIN</string>

    <!-- Menu main feed -->
    <string name="action_all">All</string>


    <!-- Posts list -->
    <string name="empty_posts_list">No posts loaded.</string>
    <string name="no_network_available">No network available. Check the connection and try again later.</string>
    <string name="list_posts_server_is_down">Seems that server is down :(</string>
    <string name="list_posts_server_is_invalid">Seems that server is invalid :(</string>
    <string name="list_posts_posts_invalid">Seems that something went wrong :( Try once more. </string>

    <string name="account_type">justrread.squirrel.com</string>
    <string name="content_authority">com.squirrel.justrread</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">justrread.squirrel.com</string>

    <!-- Key name for storing posts status in SharedPreferences -->
    <string name="pref_posts_status_key" translatable="false">pos-status</string>
    <string name="pref_subscriptions_status_key" translatable="false">sub-status</string>
    <string name="menu_web_refresh_text">Refresh</string>
    <string name="menu_web_share_text">Share link</string>

    <!-- Nav drawer related -->
    <string name="drawer_open">Opened</string>
    <string name="drawer_close">Closed</string>
    <string name="drawer_subreddits_title">SUBREDDITS</string>
    <string name="drawer_all_item">All</string>
    <string name="drawer_frontpage_item">Frontpage</string>
    <string name="drawer_random_item">Random</string>
    <string name="action_hot">Hot</string>
    <string name="action_new">New</string>
    <string name="action_top">Top</string>
    <string name="action_subreddit_about">Subreddit about</string>
    <string name="action_controversial">Controversial</string>
    <string name="empty_subscriptions_list">No subscriptions loaded.</string>


    <!-- Detail Post screen -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_detail_share_text">Share</string>
    <string name="action_details_search_text">Search</string>
    <string name="empty_comments_list">No comments for this post.</string>
    <string name="action_search">Search</string>

    <!-- Shared prefs keys -->
    <string name="front_filter_key">front_filter</string>
    <string name="two_pane_key">two_pane</string>
    <string name="is_subreddit">is_paginator_subreddit</string>
    <string name="subreddit_id">paginator_subreddit_id</string>
    <string name="subscriptions_status_key">sub_key</string>


    <!-- Subreddit about screen -->
    <string name="subreddit_about_no_connection">No Internet connection. Try later.</string>
    <string name="subreddit_about_no_data">No data available.</string>
    <string name="search_hint_text">Enter subreddit name</string>
    <string name="drawer_empty_subscriptions_list">No subscriptions yet :(</string>
    <string name="drawer_empty_subscriptions_list_for_logged_off">No subscriptions available for logged off user.</string>
    <string name="subsctions_empty_text">No subscriptions available.</string>

    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>
    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">sec</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">min</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">h</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>
    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>
    <string name="date_util_suffix">ago</string>

    <!-- Preferences -->
    <string name="prefs_night_mode_title">Night mode</string>
    <string name="prefs_night_mode_summary">Switch on the night mode for UI</string>
    <string name="prefs_nsfw_key">pref_nsfw</string>
    <string name="prefs_nightmode_key">pref_night_mode</string>

    <!-- Messages to the user -->
    <string name="hello_sername_default_text">Hello,USERNAME!</string>

    <!-- No connection and no data messages -->
    <string name="no_connection_detailed_comments_message">No Internet connection. Please try later.</string>
    <string name="drawer_setting_button">Settings</string>
    <string name="drawer_login_button">Login</string>
    <string name="widget_no_data_loaded_message">No posts loaded :(</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Accessibility - content descriptions -->
    <string name="comments_icon_content_description">Comment icon</string>
    <string name="drawer_reddit_icon_content_description">Reddit icon</string>
    <string name="drawer_frontpage_icon_content_desc">Frontpage icon</string>
    <string name="drawer_random_content_description">Randm subreddit icon</string>
    <string name="drawer_edit_subreddits_content_description">Edit subreddits button</string>
    <string name="detail_post_upvote_content_descr">Upvote</string>
    <string name="detail_downvote_content_description">Downvote</string>
    <string name="detail_post_share_button_content_descr">Share button</string>
    <string name="detail_post_thumbnail_img_content_desc">Post thumbnail image</string>
    <string name="feed_item_upvote_content_descr">Upvote</string>
    <string name="feed_item_downvote_content_desc">Downvote</string>
    <string name="feed_item_thumbnail_content_desc">Post image thumbnail</string>
    <string name="feed_item_comment_icon_content_desc">Comment icon</string>
    <string name="drawer_settings_btn_content_desc">Settings button</string>
    <string name="drawer_login_button_content_desc">Login button</string>
    <string name="search_item_subscribe_btn_content_desc">Subscribe to subreddit button</string>
    <string name="subscriptions_list_item_drag_content_desc">Adrag and drop list item</string>
    <string name="widget_thumbnail_content_desc">Post image thumbnail</string>
    <string name="widget_comment_icon_content_desc">Comment icon</string>
    <string name="nsfw_settings_content_desc">Not safe for work checkbox</string>
    <string name="night_mode_setting_content_desc">Night UI mode setting</string>

    <!-- GA events -->
    <string name="ga_logget_in_user_category">Logged in user</string>
    <string name="ga_edit_subscriptions_action">Edit subsriptions</string>
    <string name="ga_label_button">Button</string>
    <string name="ga_logged_out_category">Logged out</string>
    <string name="ga_login_action">Login</string>
    <string name="ga_logout_action">Logout</string>
    <string name="ga_subreddits_category">Subreddits</string>
    <string name="ga_all_action">All</string>
    <string name="ga_subreddit_label">Open subreddit</string>
    <string name="ga_frontpage_action">Frontpage</string>
    <string name="ga_random_action">Random</string>
    <string name="ga_search_category">Search</string>
    <string name="ga_search_action">Search subreddit</string>

    <!-- UI strings -->
    <string name="no_iternet_connection_text">No internet connection. Please try again later</string>
    <string name="no_iternet_connection_subreddit">No internet connection, can\'t open subreddit(</string>
    <string name="dialog_login_message">You need to login to proceed. Do you want to login?</string>
    <string name="dialog_login_btn_text">Login</string>
    <string name="dialog_cancel_btn_text">Cancel</string>
    <string name="drawer_user_invitation_text">"Hello, "</string>
    <string name="login_allow_message_text">You must press \'allow\' to log in with this account</string>

    <!-- Key strings -->
    <string name="login_result_key">result</string>
    <string name="all_key">all</string>
    <string name="random_subreddit_kay">random</string>

    <string name="sharing_facebook_error_message">Can\'t share to Facebook, because Facebook app is not installed.</string>
    <string name="sharing_twitter_error_message">Can\'t share to Twitter, because Twitter app is not installed.</string>
    <string name="share_post_message_text">Share post link via:</string>
    <string name="web_no_url_error">No url to share</string>
    <string name="recycler_adapter_invalid_viewtype_error_msg">"Invalid ViewType: "</string>
    <string name="search_unsubscribe_msg">You unsubscribed from /</string>
    <string name="search_unsubscribe_err_msg">"Unsubscription error: "</string>
    <string name="search_subscribe_msg">You subscribed to /</string>
    <string name="search_subsribe_error_msg">"Subscription error: "</string>
    <string name="subscription_id_text_np_name">No name available</string>
    <string name="subscriptions_dialog_title">Unsubscribe</string>
    <string name="subscriptions_dialog_messae">Do you want to unsubscribe from subreddit?</string>
    <string name="subscriptions_dialog_unsubscribe">Unsubscribe</string>
    <string name="subscriptions_unsubscribe_error">Unsubscription error. Try once more.</string>
    <string name="unsubscribe_dialog_cancel_btn">Cancel</string>
    <string name="drawer_page_title_frontpage">/frontpage</string>
    <string name="drawer_page_title_random">/random</string>
    <string name="drawer_page_title_all">/all</string>
    <string name="detail_num_comments_text_no_comments">No comments</string>
    <string name="detail_comments_text">" comments"</string>
    <string name="detail_post_erros_no_post">Post information was not properly passed to the fragment</string>
    <string name="detail_must_implement_err_message">" must implement OnFragmentInteractionListener"</string>
    <string name="feed_no_posts_more_txt">No posts to load more</string>
    <string name="feed_getting_new_posts">Getting the new posts</string>
    <string name="feed_must_implement_msg">" must implement OnFragmentInteractionListener"</string>
    <string name="feed_page_title_frontpage">/frontpage</string>
    <string name="feed_two_pane_key">TwoPane</string>

    <!-- Search results -->
    <string name="empty_search_results_text">No subreddits found :(</string>
    <string name="no_internet_connection_search_results">No internet connection :(</string>

</resources>
