<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.FrontpageFeedActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="150"
        android:title="@string/action_search"
        android:icon="@drawable/ic_magnify"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_hot"
        android:orderInCategory="90"
        android:title="@string/action_hot"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_new"
        android:orderInCategory="80"
        android:title="@string/action_new"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_top"
        android:orderInCategory="70"
        android:title="@string/action_top"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_controversial"
        android:orderInCategory="60"
        android:title="@string/action_controversial"
        app:showAsAction="never"/>
</menu>
